-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.17.0
-
3
-
9223372036854775807
[ 1971.751519] systemd[1]: mnt-lustre.mount: Succeeded. [ 1994.470244] Lustre: lustre-MDT0000: haven't heard from client b1480839-909d-4d3c-a88e-ac243d683b7a (at 0@lo) in 33 seconds. I think it's dead, and I am evicting it. exp ffff9987114b0000, cur 1733932014 expire 1733931984 last 1733931981 [ 1996.471000] Lustre: lustre-MDT0001: haven't heard from client b1480839-909d-4d3c-a88e-ac243d683b7a (at 0@lo) in 35 seconds. I think it's dead, and I am evicting it. exp ffff99866e14b000, cur 1733932016 expire 1733931986 last 1733931981 [ 1996.474826] Lustre: Skipped 4 previous similar messages [ 2109.110074] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) lustre: statahead thread waited 1024ms for inuse entry [0x200000402:0x458:0x0] to be finished [ 2263.020079] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) lustre: statahead thread waited 1152ms for inuse entry [0x200000402:0x458:0x0] to be finished [ 2417.010074] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) lustre: statahead thread waited 1280ms for inuse entry [0x200000402:0x458:0x0] to be finished [ 2724.520064] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) lustre: statahead thread waited 1536ms for inuse entry [0x200000402:0x458:0x0] to be finished [ 2724.520348] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) Skipped 1 previous similar message [ 3340.070174] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) lustre: statahead thread waited 2048ms for inuse entry [0x200000402:0x458:0x0] to be finished [ 3340.112119] Lustre: 103888:0:(statahead.c:1649:ll_statahead_thread()) Skipped 3 previous similar messages
the traces:
PID: 103888 TASK: ffff998684d94e40 CPU: 0 COMMAND: "ll_sa_18552" #0 [ffff99866ff87d20] __schedule at ffffffff8c6f6bd6 /tmp/kernel/kernel/sched/core.c: 3755 #1 [ffff99866ff87d78] schedule at ffffffff8c6f7170 /tmp/kernel/kernel/sched/core.c: 4602 #2 [ffff99866ff87d90] schedule_timeout at ffffffff8c6fd475 /tmp/kernel/kernel/time/timer.c: 1860 #3 [ffff99866ff87e48] msleep at ffffffff8c1624a2 /tmp/kernel/kernel/time/timer.c: 2011 #4 [ffff99866ff87e58] ll_statahead_thread at ffffffffc173a7a1 [lustre] /home/lustre/master-mine/lustre/llite/statahead.c: 1646 #5 [ffff99866ff87f10] kthread at ffffffff8c10383e /tmp/kernel/kernel/kthread.c: 354 #6 [ffff99866ff87f50] ret_from_fork at ffffffff8c8001c4 /tmp/kernel/arch/x86/entry/entry_64.S: 328 PID: 177657 TASK: ffff99867b05c880 CPU: 1 COMMAND: "umount" #0 [ffff99868398fd68] __schedule at ffffffff8c6f6bd6 /tmp/kernel/kernel/sched/core.c: 3755 #1 [ffff99868398fdc0] schedule at ffffffff8c6f7170 /tmp/kernel/kernel/sched/core.c: 4602 #2 [ffff99868398fdd8] schedule_timeout at ffffffff8c6fd475 /tmp/kernel/kernel/time/timer.c: 1860 #3 [ffff99868398fe90] ll_kill_super at ffffffffc16f9e96 [lustre] /home/lustre/linux-4.18.0-477.15.1.el8_8/include/linux/compiler.h: 278 #4 [ffff99868398fea8] lustre_kill_super at ffffffffc1733063 [lustre] /home/lustre/master-mine/lustre/llite/super25.c: 212 #5 [ffff99868398feb8] deactivate_locked_super at ffffffff8c260e64 /tmp/kernel/fs/super.c: 340 #6 [ffff99868398fed0] cleanup_mnt at ffffffff8c282f46 /tmp/kernel/fs/namespace.c: 115 #7 [ffff99868398fee0] task_work_run at ffffffff8c10142a /tmp/kernel/kernel/task_work.c: 127 #8 [ffff99868398ff20] exit_to_usermode_loop at ffffffff8c002355 /tmp/kernel/./include/linux/tracehook.h: 188 #9 [ffff99868398ff38] do_syscall_64 at ffffffff8c002b0e /tmp/kernel/arch/x86/entry/common.c: 200 #10 [ffff99868398ff50] entry_SYSCALL_64_after_hwframe at ffffffff8c80007d /tmp/kernel/arch/x86/entry/entry_64.S: 147